Fix mis-aligned sort icon.
Add fix for the mis-aligned table header sort icon in IE11 (CSS hack targets
IE11 only).

--- a/src/components/table/table-header/table-header.scss
+++ b/src/components/table/table-header/table-header.scss
@@ -79,6 +79,13 @@
   }
 }
 
+// Fix for IE11 mis-aligned icon
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .carbon-table-header__icon {
+    margin-top: 3px;
+  }
+}
+
 .carbon-table-header__icon--align-right {
   position: relative;
   top: 0;
